--- a/templates/index.html
+++ b/templates/index.html
@@ -2,8 +2,9 @@
 
 {% block body %}
 <h1>Input the username to get a map of friends!</h1>
-<form action="/gen_map" method="post">
-    <input name="username" placeholder="Username" type="text">
+<form action="/create_map" method="post">
+    <input name="username" placeholder="username" type="text">
+    <input name="bearer_token" placeholder="Token" type="text">
     <input type="submit" value="Generate map">
 </form>
 {% endblock %}
